[project]
name = "era5-sidecar"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "flask-cors>=5.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.14",
    "pymannkendall>=1.4",
    "requests>=2.32",
    "pyyaml>=6.0",
    # mk_collect.py dependencies
    "openmeteo-requests>=1.3",
    "requests-cache>=1.2",
    "retry-requests>=2.0",
]
